# toy-ray-tracer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
toy_ray_tracer/: Cargo.toml
toy_ray_tracer/src/: aabb.rs  camera.rs  engine.rs  hittable.rs  hittable_list.rs  main.rs  material.rs  nimage.rs  perlin.rs  project.rs  ray.rs  scene.rs  texture.rs  utils.rs  vec.rs
toy_ray_tracer/src/accelerators/: bvh.rs  mod.rs
toy_ray_tracer/src/bxdfs/: mod.rs
toy_ray_tracer/src/core/: aabb.rs  camera.rs  hittable.rs  hittable_list.rs  interaction.rs  light.rs  material.rs  mod.rs  nimage.rs  primitive.rs  project.rs  ray.rs  reflection copy.rs  reflection.rs  sampler.rs  scene.rs  shape.rs  spectrum.rs  texture.rs  transform.rs  vec.rs
toy_ray_tracer/src/environment/: mod.rs
toy_ray_tracer/src/geometry/: mod.rs  visitor.rs
toy_ray_tracer/src/geometry/containers/: bvh.rs  (+2 more)
toy_ray_tracer/src/integrators/: mod.rs  path.rs
toy_ray_tracer/src/lights/: area.rs  infinite.rs  list.rs  mod.rs
toy_ray_tracer/src/materials/: diffuse_light.rs  gltfpbr.rs  mod.old.rs  mod.rs  naive.rs  transparent.rs
toy_ray_tracer/src/math/: mod.rs  onb.rs  pdf.rs  sampler.rs
toy_ray_tracer/src/primitives/: geometry.rs  mod.rs  primitive_list.rs  transform.rs
toy_ray_tracer/src/scene_builder/: assets.rs  builder.rs  js.rs  load.rs  mod.old.rs  mod.rs  types.rs
toy_ray_tracer/src/scenes/: cornell_box_foggy.rs  earth.rs  mod.rs  scene1.rs  scene2.rs
toy_ray_tracer/src/shapes/: bvh.rs  cube.rs  cylinder.rs  disk.rs  medium.rs  mesh.rs  mod.rs  pyramid.rs  rect.rs  regular_polygon.rs  shape_list.rs  sphere.rs  triangle.rs
toy_ray_tracer/src/textures/: checker.rs  constant.rs  image_texture.rs  mod.rs  noise.rs
toy_ray_tracer/src/transforms/: mod.rs  rotate.rs  translate.rs
toy_ray_tracer/src/utils/: mod.rs
(+83 files in other folders)
