[package]
name = "toy_ray_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["quickjs"]
quickjs = []

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.6", features = ["derive"] }
clap-verbosity-flag = "1.0"
derive-new = "0.5.9"
fastrand = "1.7.0"
image = "0.24.1"
log = { version = "0.4", features = ["kv_unstable"] }
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
pretty_env_logger = "0.4"
rand = "0.8.5"
rayon = "1.5.1"
thread_local = "1.1.4"
schemars = "0.8.8"
serde = "1.0"
serde_json = "1.0"
tempdir = "0.3"
rquickjs = { version = "0.1.5", features = ["bindgen"] }
paste = "1.0.7"
