[package]
name = "toy_ray_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["quickjs"]
quickjs = []

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "3.1.6", features = ["derive"] }
clap-verbosity-flag = "1.0"
derive-new = "0.5.9"
fastrand = "1.7.0"
image = "0.24.1"
log = { version = "0.4", features = ["kv_unstable"] }
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
pretty_env_logger = "0.4"
rand = "0.8.5"
rayon = "1.5.1"
thread_local = "1.1.4"
schemars = "0.8.8"
serde = "1.0"
serde_json = "1.0"
tempdir = "0.3"
tobj = "3.2.1"
rquickjs = { version = "0.1.5", features = ["loader"] }
paste = "1.0.7"
url = "2.2.2"
enumflags2 = "0.7.5"
easy-gltf = "0.1.5"

[target.'cfg(target_arch = "aarch64-apple-darwin")'.dependencies]
rquickjs = { version = "0.1.5", features = ["bindgen", "loader"] }
